--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
@@ -107,7 +107,7 @@
                 },
             },
             methods: {
-                retrieve() {
+                retrieve:function() {
                 	var dataWrap=$.createAjaxDataWrap();
                 	dataWrap.setData(this.menuForm);
                     $.request({
@@ -124,7 +124,7 @@
                         }
                     });
                 },
-                handleNodeClick(nodeData, node) {
+                handleNodeClick:function(nodeData, node) {
                 	$.request({
                         url: $$pageContextPath + "sys/menu/retrieve",
                         type: "POST",
@@ -144,7 +144,7 @@
                         }
                     });
                 },
-                add(){
+                add:function(){
                 	$.openDialog({
                 		title : "维护菜单",
                 		url : $$pageContextPath + '/sys/menu/menuDialog?aaa=2&testParam=321',
@@ -158,7 +158,7 @@
                 		}
                 	});
                 },
-                rowDblcick(row){
+                rowDblcick:function(row){
                 	var dataWrap=$.createAjaxDataWrap();
                 	dataWrap.setData(row);
                 	$.openDialog({
@@ -177,7 +177,7 @@
                 		}
                 	});
                 },
-                del(){
+                del:function(){
                 	$.confirm("确定删除吗?",function(){
                 		var dataWrap=$.createAjaxDataWrap();
                     	var dataList = vm.$refs["tableMenu"].getSelectedRows();
@@ -195,7 +195,7 @@
                 	});
                 	
                 },
-                save(){
+                save:function(){
                 	var dataWrap=$.createAjaxDataWrap();
                 	var dataList = vm.$refs["tableMenu"].getUpdatedRows();
                 	dataWrap.dataList=dataList;
