--- a/01SOURCE/vue/vuell/src/templates/testCollapse.html
+++ b/01SOURCE/vue/vuell/src/templates/testCollapse.html
@@ -28,7 +28,7 @@
           </ll-table-column-zz>
           <ll-table-column-zz :sortable="false" label="地址" :istemplate="true" :width="180">
             <template slot-scope="scope">
-
+{{scope.row.rowId}}
             </template>
             <template slot="header" slot-scope="scope">
               <ll-input size="mini" placeholder="输入关键字搜索" />
