--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/role/bind-menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/role/bind-menu.html
@@ -16,8 +16,8 @@
                         <span>
 	                        <span>
 	                            <ll-checkbox-group v-model="data.prop6" @change="groupChange(data)">
-	                                <ll-checkbox label="0" :key="0">读</ll-checkbox>
-	                                <ll-checkbox label="1" :key="1">写</ll-checkbox>
+	                                <ll-checkbox label="1" :key="1">读</ll-checkbox>
+	                                <ll-checkbox label="2" :key="2">写</ll-checkbox>
 	                            </ll-checkbox-group>
 	                        </span>
                         </span>
@@ -37,7 +37,7 @@
 </body>
 <script type="text/javascript">
     var dataWrap = ajaxResponse.get("dataWrap");
-
+	var roleId = ajaxResponse.get("roleId");
     var vm = new Vue({
         el: '#app',
         data: {
@@ -47,20 +47,49 @@
                 label: 'name',
                 isLeaf: 'isLeaf'
             },
-            readList:[],
-            writeList:{}
+            updateList:[]
         },
         methods: {
 			save:function(){
-				
+				var dataWrap=$.createAjaxDataWrap();
+            	dataWrap.setDataList(this.updateList);
+                $.request({
+                    url: $$pageContextPath + "sys/role/"+roleId+"save",
+                    data: {
+                    	dataWrap:dataWrap
+                    },
+                    success: function (response) {
+                        var dataWrap = response.get("dataWrap");
+                        if (dataWrap == null || dataWrap.dataList == null || dataWrap.dataList.length ==
+                            0)
+                            vm.$alert("未查询到任何数据!");
+                        vm.$set(vm.$data, "dataWrap", dataWrap);
+                    }
+                });
 			},
 			reset:function(){
 				
 			},
-			groupChange(a,b,c){
-				console.log(a)
-				console.log(b)
-				console.log(c)
+			groupChange(data,b,c){
+				console.log(data);
+				console.log(this.updateList)
+				var index = this.$_.findIndex(this.updateList,function(i){
+					return i.menuId==data.code;
+				})
+				if(index==-1){
+					this.updateList.push({
+						menuId:data.code,
+						roleId:roleId,
+						roleNum:_.reduce(data.prop6, function(memo, num){ return memo + num; }, 0)
+					});
+				}else{
+					this.updateList[index] = {
+						menuId:data.code,
+						roleId:roleId,
+						roleNum:_.reduce(data.prop6, function(memo, num){ return memo + num; }, 0)
+					};
+				}
+				 
 			}
         }
     });
