--- a/01SOURCE/vue/vuell/src/templates/testTree.html
+++ b/01SOURCE/vue/vuell/src/templates/testTree.html
@@ -25,7 +25,7 @@
         padding-right: 8px;">
             <span >{{ node.label }}</span>
             <span >
-                <ll-checkbox-group v-model="checkList">
+                <ll-checkbox-group v-model="checkList"  @change="groupChange(data)">
                     <ll-checkbox label="读"></ll-checkbox>
                     <ll-checkbox label="写"></ll-checkbox>
                 </ll-checkbox-group>
@@ -48,12 +48,25 @@
         label: 'name',
         isLeaf: 'isLeaf'
       },
-      checkList:""
+      checkList:[],
+      updateList:[]
     },
     methods: {
       handleNodeClick(nodeData, node) {
 
-      }
+      },
+			groupChange(a,b,c){
+        console.log(a)
+				var item = this.$_.find(this.updateList,function(){
+					return item.code==a.code;
+				})
+				if(this.$_.isUndefined(item)){
+					this.updateList.push(a);
+				}else{
+					item = a;
+				}
+				
+			}
     }
   })
 
