--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
@@ -11,7 +11,7 @@
         <ll-container style="height: 100%; ">
             <ll-aside width="200px" style="border-right:1px solid #eee;">
                 <ll-card class="box-card" style="height:100%;">
-                    <ll-tree-zz :items="data" :props="defaultProps" :datasource="datasource" accordion @node-click="handleNodeClick">
+                    <ll-tree-zz :props="defaultProps" :datasource="datasource" accordion @node-click="handleNodeClick">
                     </ll-tree-zz>
                 </ll-card>
             </ll-aside>
