--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -126,3 +126,13 @@
   color:#8D99b0!important;
   font-size: 14px;
 }
+
+.el-menu--popup-right-start {
+  margin-left: 0px;
+  margin-right: 5px;
+}
+
+.el-menu--popup {
+  border-left: 1px solid @baseColor;
+  
+}
