--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="app" style="height: 100%;width: 100%;">
+    <div id="app" style="height: 100%;width: 100%;"  v-cloak>
         <ll-container style="height: 100%; ">
             <ll-header style="background-color:#eee;">
             	<ll-radio-group v-model="isCollapse" style="margin-bottom: 20px;">
