--- a/01SOURCE/vue/vuell/src/templates/testDropTree.html
+++ b/01SOURCE/vue/vuell/src/templates/testDropTree.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="app" style="height: 100%;width: 100%;">
-    <ll-drop-tree-zz :datasource="datasource" v-model="selectValue" :label-datasource="labelDatasource"></ll-drop-tree-zz>
+    <ll-drop-tree-zz ref="dropTree" :datasource="datasource" v-model="selectValue" :label-datasource="labelDatasource"></ll-drop-tree-zz>
   </div>
 </body>
 <script type="text/javascript">
