--- a/01SOURCE/vue/vuell/src/templates/testCollapse.html
+++ b/01SOURCE/vue/vuell/src/templates/testCollapse.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app" style="height: 100%;width: 100%;">
+  <div id="app" style="height: 100%;width: 100%;" v-cloak>
     <ll-collapse v-model="activeName" accordion>
       <ll-collapse-item title="一致性 Consistency" name="1" style="height:100%;">
         <ll-button type="primary" size="mini" @click="setRowReadonly" >主要按钮</ll-button>
@@ -22,7 +22,9 @@
           </ll-table-column-zz>
           <ll-table-column-zz prop="date" type="date" label="日期" :width="180">
           </ll-table-column-zz>
-          <ll-table-column-zz type="select" prop="name" label="姓名" :width="180" :items="items">
+          <ll-table-column-zz type="select" prop="name"  :label-datasource="labelDatasource"  label="姓名" :width="180" :items="items">
+          </ll-table-column-zz>
+          <ll-table-column-zz type="droptree"  :datasource="datasource" :label-datasource="labelDatasource"  prop="parentId" label="下拉树" :width="180" :items="items">
           </ll-table-column-zz>
           <ll-table-column-zz prop="address" label="地址" :width="180" :readonly="false">
           </ll-table-column-zz>
@@ -66,8 +68,9 @@
         dataList: [{
             rowId:1,
             enable1:"1",
+            parentId:"1",
             date: "2016-05-02",
-            name: "选项1",
+            name: "1",
             address: "上海市普陀区金沙江路 1518 弄",
             editFlag: false
           },
@@ -75,7 +78,8 @@
             rowId:2,
             enable1:"0",
             date: "2016-05-01",
-            name: "选项1",
+            parentId:"402",
+            name: "401",
             address: "上海市普陀区金沙江路 1519 弄",
             editFlag: true
           },
@@ -83,7 +87,8 @@
             rowId:3,
             enable1:"1",
             date: "2016-05-03",
-            name: "选项2",
+            parentId:"401",
+            name: "1",
             address: "上海市普陀区金沙江路 1516 弄",
             editFlag: true
           },
@@ -91,7 +96,8 @@
             rowId:4,
             enable1:"0",
             date: "2016-05-04",
-            name: "选项3",
+            parentId:"401",
+            name: "401",
             address: "上海市普陀区金沙江路 1517 弄",
             editFlag: true
           },
@@ -104,19 +110,19 @@
       },
       items: [
         {
-          value: "选项1",
+          value: "401",
           label: "黄金糕"
         },
         {
-          value: "选项2",
+          value: "12",
           label: "双皮奶"
         },
         {
-          value: "选项3",
+          value: "402",
           label: "蚵仔煎"
         },
         {
-          value: "选项4",
+          value: "1",
           label: "龙须面"
         },
         {
